2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialog.cpp:

	Don't focus the checkbox initially. Fixes bug #163371.

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_construct):

	Make Close the default button.

2005-09-14  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Set "website-label" property.

2005-09-09  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphySingle.cpp:

	Manually emit the "profile-change-net-teardown" notification;
	works around bug https://bugzilla.mozilla.org/show_bug.cgi?id=292699.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Remove unused code.

2005-09-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:
	* embed/ephy-history.h:

	Implement [SG]etGeckoURIFlags for gecko 1.9.

2005-09-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyUtils.cpp:

	Mozilla printing code is braindead. Bug #163255.

2005-09-03  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Depend on pygtk 2.8. Fixes bug #314557.

	* src/languages.h:

	Remove duplicate entries.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):
	* src/pdm-dialog.c: (show_cookies_properties):

	Fix HIG spacings.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:

	Remove find dialogue, and tweak spacings to be HIG compliant.

2005-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:

	Only listen for trusted events.

2005-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gtk requirement.

2005-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:

	Better message on the enter-secure warning.

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>
