@@ -1,3 +1,9 @@
+2005-09-15  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
+	If the search term is empty for a smart bookmark use the normal
+	URL instead of the smart url with the %s replaced by ""
+
 2005-09-15  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/GtkNSSDialog.cpp:
